Bug 478075: Remove parent argument to js_GetCallObject. r=brendan